www/index.css
html {
    font-family: Sans;
}

html, body {
    height: 100%;
}

.hide {
    display: none !important;
}

body {
    margin: 0px;
    padding: 0px;
    display: flex;
    flex-direction: column;
}

body > * {
    flex: 1 1 0;
}

hr {
    border: none;
    border-top: 1px solid black;
}

a {
    text-decoration: none;
}

.link {
    cursor: pointer;
    color: rgb(0, 0, 255);
}

.link:hover {
    color: rgb(0, 0, 100);
}

#content {
    margin: 10px;
    display: flex;
    flex-direction: column;
}

#content > * {
    flex: 1 1 0;
}

#toolbar {
    flex: 0 1 0;
}

#grid_container {
    display: grid;
    grid-template-columns: 1fr 1fr;
    grid-template-rows: 45vh 1fr;
    grid-gap: 10px;
    margin-top: 10px;
}

#grid_container > * {
    min-width: 0;
    min-height: 0;
}

#code_input, #tables, #output {
    border: 1px solid #b3b3b3;
}

#tab_container {
    grid-column: 2 / 3;
    grid-row: 1 / 2;
}

#code_input {
    grid-column: 1 / 2;
    grid-row: 1 / 2;
}

#tables {
    grid-column: 2 / 3;
    grid-row: 1 / 2;
    display: flex;
    flex-direction: column;
}

#table_container {
    flex: 1 1 0;
    min-height: 0px;
    margin: 5px;
}

#table_container, .tab_body {
    height: 100%;
}

.jexcel_content {
    width: 100% !important;
    padding-bottom: 2px;
}

#output {
    grid-column: 1 / 3;
    grid-row: 2 / 3;
    resize: none;
    margin: 0;
}

#table_container > .tab_body {
    display: none;
}

#table_container > .tab_body.current {
    display: block;
}

#tab_container {
    display: flex;
    flex-wrap: wrap;
    background-color: #f4f4f4;
}

#tab_container > .tab_button {
    flex: 0 0 auto;
    user-select: none;
    -moz-user-select: none;
    -webkit-user-select: none;
    border-right: 1px solid black;
    border-bottom: 1px solid black;
    padding: 5px 10px;
}

#tab_container > .tab_button > .tab_text {
    padding: 0px 10px;
}

#tab_container > .tab_button.current {
    font-weight: bold;
    border-bottom: none;
    background-color: white;
}

#tab_container > .tab_button .xbtn {
	margin-left: 10px;
}

#tab_container > .tab_button .xbtn:hover {
	color: red;
}

#modal_overlay {
    display: flex;
    justify-content: center;
    align-items: center;
    position: fixed;
    height: 100%;
    width: 100%;
    z-index: 30000;
    background-color: #00000080;
}

#modal_overlay > * {
    flex: 0 0 auto;
}

#new_table_form {
    background-color: #e6e6e6;
    border-radius: 4px;
    padding: 20px;
}

.content {
  padding-left: 25px;
  padding-right: 25px;
}

.content .title {
  margin-top: 50px;
  text-align: center;
  font-weight:200;
  font-size: 2.5rem;
  letter-spacing: 0.05rem;
}

.content .input_field {
  margin-top: 25px;
}

.content .input-line {
  width: 100%;
  background: none;
  margin-bottom: 10px;
  line-height:2.4em;
  color: black;
  letter-spacing: 0.02rem;
  font-size:1.2rem;
  border: none;
  border-bottom: 1px solid black;
  transition: all .2s ease;
}

#spacing {
  flex-grow: 1;
  height: 100px;
}

.content div button {
  width: 40%;
  float; left;
  cursor: pointer;
  background: none;
  border: 1px solid black;
  border-radius: 25px;
  color: black;
  align-self: flex-end;
  font-size: 1.2rem;
  line-height: 2.5em;
  margin-top: auto;
  margin-bottom: 25px;
  transition all .2s ease;
}
#submit_button {
  float: right;
}

#page {
    display: flex;
    min-height: 0;
}

#page > * {
    flex: 1 1 0;
}

#sidebar {
    flex: 0 0 auto;
    width: 0;
    background-color: #e6e6e6;
    overflow: auto;
    transition: width 0.5s;
}

#sidebar > div {
    margin: 20px 20px 0 20px;
}

#sidebar.expanded {
    width: 26vw;
}

#tut_list {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
}

#tut_list > * {
    margin: 5px 0;
}

#tut_title {
    font-size: 28px;
}

#tut_body {
    font-size: 12px;
}

#tut_body img {
    max-width: 100%;
}

#tut_body pre {
    overflow: auto;
    background-color: #ffffff;
    padding: 8px;
    border: 1px solid #b3b3b3b3;
    border-radius: 4px;
}

#tut_body code {
    background-color: #ffffff;
    border-radius: 2px;
    padding: 1px 2px;
}

#tut_body pre > code {
    padding: 0;
}

#sidehandle {
    flex: 0 0 auto;
    width: 20px;
    background-color: #d0d0d0;
    border-left: 1px solid #a3a3a3;
    border-right: 1px solid #a3a3a3;
    cursor: pointer;
    display: flex;
    flex-direction: column;
    justify-content: center;
    text-align: center;
    user-select: none;
    color: #505050;
}

#sidehandle:hover {
    background-color: #c0c0c0;
}

#footer {
    flex: 0 0 auto;
    display: flex;
    justify-content: center;
    align-items: center;
    height: 45px;
    border-top: 1px solid #b3b3b3;
    background-color: #f4f4f4;
    font-size: 12px;
}

#footer > span > * {
    margin: 0 5px;
}

#toolbar .toolbar-group {
  background-color: #f4f4f4;
  border-color: rgba(0,0,0,.1);
  height: 34px;
  display: flex;
  overflow: hidden;
  border:1px solid #b3b3b3;
}

.toolbar-button {
  border: none;
  font-size: inherit;
  box-sizing: border-box;
  padding: 0 8px;
  min-width: 34px;
  flex: 0 0 auto;
  position: relative;
  background-color: initial;
}

.toolbar-button:focus {
  outline: none !important;
}

.toolbar-button:hover {
  background-color: #808080;
}

